JEAP-5477: Remove the support for the deprecated EventProcessingFailedEvent.